Fixed up CSS, adjusted content in obd reader, changed location and paths for CSS in auto projects

--- a/autoProjectPages/01civic/civic.html
+++ b/autoProjectPages/01civic/civic.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./civic.css">
+    <link rel="stylesheet" href="../slideshow.css">
     <title>Engine Swap in a 2007 Civic</title>
-    <script src="./civic.js" defer></script>
+    <script src="../slideshow.js" defer></script>
 </head>
 <!-- Need to create TWO VERSIONS of this page - The main page when landing on it should
 present these links with the following options:
@@ -56,7 +56,7 @@ webcomics like XKCD or other picture-based 'stories' -->
             <div id="heading" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/02civicDelivery.jpg" alt="Civic off the trailer">
 
-                <h3>He said it wouldn't start</h3>
+                <p>He said it wouldn't start</p>
             </div>
             <div id="runTest" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/03runningTest.jpg"
@@ -69,8 +69,13 @@ webcomics like XKCD or other picture-based 'stories' -->
                 <!-- <p>!!!!!Insert video here!</p>
                 <p>!!!!!Insert video2 here!</p> -->
             </div>
+            <div id="knocking_video" class="slide">
+                <p>Insert video here of running</p>
+                <p>Except it sounded like a machine gun when running</p>
+            </div>
             <div id="theDonor" class="slide">
                 <h3>So, off to the pick'n'pull</h3>
+                <p>Insert image of pick and pull junkyard</p>
                 <p>
                     I kept an eye on the local pick'n'pull's inventory for a Civic to
                     show up with an R18 engine. Finally, one showed up.
@@ -104,8 +109,8 @@ webcomics like XKCD or other picture-based 'stories' -->
                 <img src="../autoProjectImages/civicEngineSwap/10enginePulled.jpg" alt="Engine on the cart">
                 <p>
                     And checked out of the pick'n'pull! We actually were able to get
-                    from 0 to check-out in 3 hours! I was pretty proud of my Dad and I
-                    to pull that off.
+                    from 0 to check-out in 3 hours! I was pretty proud we pulled that 
+                    off.
                 </p>
                 <!-- <img src="../autoProjectImages/civicEngineSwap/11checkout.jpg" alt="Checking out at the pick'n'pull"> -->
             </div>
@@ -120,35 +125,31 @@ webcomics like XKCD or other picture-based 'stories' -->
             <div id="theVictim" class="slide">
                 <img src="../autoProjectImages/civicEngineSwap/13restingPlace.jpg"
                     alt="The Civic resting on a pallet infront of the recipient">
-
-                <h3>Pulling the victim's engine</h3>
-                <p>
-                    While we were able to pull the engine in the junkyard rather rapidly,
-                    I had to ensure that I didn't damage anything pulling the victim's
-                    engine. I wanted the install of the replacement engine to go as
-                    smoothly as possible.
-                </p>
-            </div>
-            <div id="wrapped" class="slide">
-                <img src="../autoProjectImages/civicEngineSwap/14weatherWrap.jpg"
-                    alt="Donor engine, wrapped to protect it from the weather">
-
                 <p>
                     I knew it would take some time, so I set up a pallet to keep the
                     donor engine high and dry while I was working on preparing the
                     blown engine to be pulled.
                 </p>
+                <!-- <p>
+                    While we were able to pull the engine in the junkyard rather rapidly,
+                    I had to ensure that I didn't damage anything pulling the victim's
+                    engine. I wanted the install of the replacement engine to go as
+                    smoothly as possible.
+                </p> -->
             </div>
-            <div id="clear_way" class="slide">
-                <img src="../autoProjectImages/civicEngineSwap/15clearingTheWay.jpg" alt="An in-progress picture of clearing the accessories off the
-                    blown engine">
+            <div id="wrapped" class="slide">
+                <img src="../autoProjectImages/civicEngineSwap/14weatherWrap.jpg"
+                    alt="Donor engine, wrapped to protect it from the weather">
                 <p>
                     I wrapped up the donor engine with some plastic to protect it from
-                    any potential rain. I'm taking my time, and don't want to rush or
-                    burn out.
+                    any potential rain. 
                 </p>
+ 
             </div>
+
             <div id="ac_system" class="slide">
+                <img src="../autoProjectImages/civicEngineSwap/15clearingTheWay.jpg" alt="An in-progress picture of clearing the accessories off the
+                blown engine">
                 <p>
                     I didn't want to have to evacuate or refill the A/C system or power
                     steering <sup>(not pictured)</sup>, so I made sure they were out of
@@ -205,8 +206,8 @@ webcomics like XKCD or other picture-based 'stories' -->
                     alt="Inspecting the bell housing attachment point">
                 <p>
                     Here I'm inspecting the bell housing attachment points to ensure
-                    there will be no issues mating the transmission to the engine. Also,
-                    these bolt holes are used to mount the engine to the engine stand,
+                    there will be no issues mating the transmission to the engine. These
+                     bolt holes are also used to mount the engine to the engine stand,
                     and to attach the lifting chains.
                 </p>
             </div>
