--- a/index.html
+++ b/index.html
@@ -78,16 +78,10 @@
         </div>
 
         <div class="learnmore">
-            <h2>And here's my food, dog, and cat taxes</h2>
+            <h2>And here's my dog and cat taxes</h2>
         </div>
         <div class="cards">
 
-            <div class="project">
-                <img class="boxed" src="images/fudgestripescrop.jpg" alt="A fresh fudge stripe cookie hovering over milk">
-                <p>
-                    I <em>really</em> love food... And fudge stripe cookies are awesome
-                </p>
-            </div>
             <div class="project">
                 <img class="boxed" src="images/dogtax.jpg" alt="A beautiful black and white dog">
                 <p>
